# platypu-boy

./: LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: daily-sender.yaml
